# DeluluDesktop

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
docs/: architecture.md  development.md  usage.md
local-extractor/: README.md  SECURITY.md  cli.js  package.json  stdio-bridge.js
local-extractor/src/: cache.js  config.js  extractor.js  index.js  patterns.js  queue.js  utils.js  vidlink.js
tauri.deluluapp/: .env.example  index.html  package.json  vite.config.ts
tauri.deluluapp/scripts/: run-tauri-with-setup.cjs  setup-standalone-extractor.cjs
tauri.deluluapp/src/: App.tsx  main.tsx
tauri.deluluapp/src-tauri/: Cargo.toml  nsis-hooks.nsi  tauri.conf.json
tauri.deluluapp/src-tauri/.cargo/: config.toml
tauri.deluluapp/src-tauri/capabilities/: default.json
tauri.deluluapp/src-tauri/icons/: icon.icns
tauri.deluluapp/src-tauri/src/: lib.rs  main.rs  proxy.rs
tauri.deluluapp/src/config/: firebase.ts
tauri.deluluapp/src/context/: AuthContext.tsx  MiniPlayerContext.tsx  UserListsContext.tsx
tauri.deluluapp/src/hooks/: useLenis.ts
tauri.deluluapp/src/pages/: Details.css  Details.tsx  Home.css  Home.tsx  Movies.css  Movies.tsx  MyList.css  MyList.tsx  Random.css  Random.tsx  Settings.css  Settings.tsx  TVShows.css  TVShows.tsx  VidLinkStream.css  VidLinkStream.tsx
tauri.deluluapp/src/services/: database.ts  imageCache.ts  streamCache.ts  tmdb.ts  userLists.ts  vidlink.ts  watchHistory.ts
tauri.deluluapp/src/styles/: index.css
tauri.deluluapp/src/utils/: authErrors.ts  hlsProxy.ts  productionGuard.ts
(+43 files in other folders)
