[package]
name = "delulu"
version = "1.0.0"
description = "Delulu - Movie & TV Streaming Desktop App"
authors = ["Delulu Team"]
edition = "2021"

[lib]
name = "delulu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7"
reqwest = "0.12"
url = "2"
urlencoding = "2"
tokio = { version = "1", features = ["net", "time", "sync", "process", "io-util"] }
lru = "0.12"
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }
tauri-plugin-dialog = "2"

[features]
# DevTools only in dev builds — stripped entirely from release binary
devtools = ["tauri/devtools"]

# Release profile: max optimization + strip symbols
[profile.release]
opt-level = "s"        # Optimize for binary size
lto = true              # Link-time optimization — dead code elimination + inlining
codegen-units = 1       # Single codegen unit = better optimization
panic = "abort"         # No unwinding = smaller binary + no panic backtraces
strip = true            # Strip debug symbols from binary
